add android studio 2021.1.1 RC1 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) RC1 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) RC1</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.19/android-studio-2021.1.1.19-windows.exe">android-studio-2021.1.1.19-windows.exe</a>
+                                </td>
+                                <td>914794952 bytes</td>
+                                <td>c9f3c3544ec681672677f635706c983bc967a61bc8cef0d6aaa24e48d372d92c</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7sd58vwsj30nn0c5go3.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.19/android-studio-2021.1.1.19-windows.zip">android-studio-2021.1.1.19-windows.zip</a>
+                                </td>
+                                <td>925459484 bytes</td>
+                                <td>27015ad5e1abb2586de52bc77a0b2b40e902db5dea718a4e2565b2d498e44cbb</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.19/android-studio-2021.1.1.19-mac.zip">android-studio-2021.1.1.19-mac.zip</a>
+                                </td>
+                                <td>974988930 bytes</td>
+                                <td>32a0e81d1de412601ef2d7a1d177d4a5830bb513c46674502bdd833253c69e50</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.19/android-studio-2021.1.1.19-mac_arm.zip">android-studio-2021.1.1.19-mac_arm.zip</a>
+                                </td>
+                                <td>971445293 bytes</td>
+                                <td>66e75b427155ba5b07cfa0e7eefc5c3864269411e16674b300a5f475f026a64f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.19/android-studio-2021.1.1.19-linux.tar.gz">android-studio-2021.1.1.19-linux.tar.gz</a>
+                                </td>
+                                <td>948334639 bytes</td>
+                                <td>dc2334357c5026ba7afee7a9ac61c97c127e3d01d1c13e5d125df4df4ac3b4c0</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.19/android-studio-2021.1.1.19-cros.deb">android-studio-2021.1.1.19-cros.deb</a>
+                                </td>
+                                <td>799052224 bytes</td>
+                                <td>d7f734940396f95057e2d933e8cf95ab3f8a210c873cdb30dc32c9dbadbc7673</td>
+                            </tr>
                             <!-- Chipmunk (2021.1.1) Canary 6 -->
                             <tr>
                                 <td rowspan="7">Chipmunk (2021.2.1) Canary 6</td>
