--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
                 </div>
                 <div class="swiper-slide">
                     <a href="https://androidweekly.io?utm_source=androiddevtools.cn&amp;utm_medium=banner" target="_blank" onclick="trackOutboundLink('https://androidweekly.io', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。" >
-                        <img src="https://i.loli.net/2019/10/31/DZd9HX31jL2NlxY.png">
+                        <img src="https://tva1.sinaimg.cn/large/e6c9d24egy1h577kvqezqj21e00gp0to.jpg">
                     </a>
                 </div>
                 <div class="swiper-slide">
                     <a href='http://www.materialdoc.cn?utm_source=androiddevtools.cn&amp;utm_medium=banner' target="_blank" onclick="trackOutboundLink('https://www.materialdoc.cn', 'Materialdoc', 'click');" title="Material Design 开发者参考文档">
-                        <img src="https://i.loli.net/2019/10/31/ybcFZ9NnEzt4R37.jpg">
+                        <img src="https://tva1.sinaimg.cn/large/e6c9d24egy1h577l5oxtdj22i00u0q9x.jpg">
                     </a>
                 </div>
             </div>
