--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
             <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
+                    <a href='https://flutter.cn/urls/soa-s6-adt?utm_source=androiddevtools.cn&amp;utm_medium=banner' target="_blank" onclick="trackOutboundLink('https://flutter.cn/urls/soa-s6-adt', 'SOA-S6', 'click');" title="Google 谷歌应用出海计划 | 指南针 第六期">
+                        <img src="https://devrel.andfun.cn/devrel/posts/2023-05-08-033117.png">
+                    </a>
+                </div>
+                <div class="swiper-slide">
                     <a href="https://androidweekly.io?utm_source=androiddevtools.cn&amp;utm_medium=banner" target="_blank" onclick="trackOutboundLink('https://androidweekly.io', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。" >
                         <img src="https://p.ipic.vip/gfoczx.jpg">
                     </a>
