--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <style>
             :root {
-                --swiper-theme-color: #FFFFFF;
+                --swiper-theme-color: #6ab344;
                 --swiper-navigation-size: 28px;
             }
             .swiper-container {
