--- a/donate.html
+++ b/donate.html
@@ -1781,23 +1781,25 @@
             });
         });
     </script>
-    <!-- Google Analytics -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NQH6H0E3Y6"></script>
     <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-        ga('create', 'UA-52369435-2', 'auto');
-        ga('send', 'pageview');
+        gtag('config', 'G-NQH6H0E3Y6');
+        var trackOutboundLink = function(url, category, action) {
+            var redirectTriggered = false;
+            gtag('send', 'event', category, action, url, {
+                'hitCallback': function() {
+                    redirectTriggered = false;
+                    window.open(url, '_blank');
+                }
+            });
+        };
     </script>
+    <!-- End Google Analytics -->
     <!-- End Google Analytics -->
     <!-- add target attr to all a tag -->
     <script type="text/javascript">
