添加aihunt网站链接

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" href="static/image/favicon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- GrowingIO 统计 -->
     <!-- <script type='text/javascript'>
         var _vds = _vds || [];
@@ -152,22 +153,18 @@
                         <a class="dropdown-item" href="index.html/#free-design-resources">Design Resources</a>
                     </div>
                 </li>
+                <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="aihunt" href="https://aihunt.one">AI 工具</a></li>
+                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">捐赠</a></li>
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">更多</a>
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
                         <a class="dropdown-item" href="index.html/#books-list">书</a>
                         <a class="dropdown-item" href="index.html/#fuck-gfw-list">福利</a>
                         <a class="dropdown-item" href="gay_friends.html" id="gay_friends">好基友们</a>
+                        <a class="dropdown-item text-center" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
                     </div>
                 </li>
-                <!-- <li class="nav-item"><a class="nav-link" href="#books-list">书</a></li>
-                <li class="nav-item"><a class="nav-link" href="#fuck-gfw-list">福利</a></li>
-                <li class="nav-item"><a class="nav-link" id="gay_friends" href="gay_friends.html">好基友们</a></li> -->
-                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">捐赠</a></li>
                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
-                <li class="nav-item mx-4">
-                    <a class="nav-link menu-github-icon" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="36px" src="static/image/icon-github.png" alt="GitHub" /></a>
-                </li>
               </ul>
             </div>
         </nav>
@@ -182,13 +179,8 @@
                     <p>以下是我的好基友们，他们既是 Android 牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年，以及其他一些有用的、有意思的网站。</p>
                     <ul>
                         <li>
-                            <a href="http://gank.io" target="_blank" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
-                                <img src="https://i.loli.net/2019/04/28/5cc573795dc50.jpg" />
-                            </a>
-                        </li>
-                        <li class="hide">
-                            <a href="http://stormzhang.com" target="_blank" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
-                                <img src="https://i.loli.net/2019/04/28/5cc5831675042.png" />
+                            <a href="http://www.androidweekly.io/" target="_blank" title="汇集互联网上每周Android开发相关的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
+                                <img src="https://i.loli.net/2019/05/01/5cc9475b258bd.png" />
                             </a>
                         </li>
                         <li>
@@ -202,48 +194,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.liaohuqiu.net" target="_blank" title="秋百万，Make it better.">
-                                <img src="https://i.loli.net/2019/04/28/5cc5739ae808a.jpg" />
-                            </a>
-                        </li>
-                        <li>
                             <a href="http://droidyue.com/" target="_blank" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
                                 <img src="https://i.loli.net/2019/05/01/5cc948d45fc58.png" />
-                            </a>
-                        </li>
-                        <li class="hide">
-                            <a href="http://drakeet.me" target="_blank" title="Drakeet">
-                                <img src="https://i.loli.net/2019/04/28/5cc5835b85b24.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://hukai.me" target="_blank" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
-                                <img src="https://i.loli.net/2019/04/28/5cc583b7235a0.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://www.androidweekly.io/" target="_blank" title="汇集互联网上每周Android开发相关的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
-                                <img src="https://i.loli.net/2019/05/01/5cc9475b258bd.png" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://www.race604.com" title="专注 Android 移动应用开发，在开发中积累和成长。">
-                                <img src="https://i.loli.net/2019/04/28/5cc58414b49d1.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://kymjs.com" title="Hello，大家好，我是张涛，网名kymjs，在深圳的湖北人。开源中国移动开发工程师。爱看书，爱敲码，善于交流，乐于分享。曾担任电影《天籁：一万年以后》新媒体推广产品经理，负责电影推广营销事项。">
-                                <img src="https://i.loli.net/2019/04/28/5cc5843235169.jpg" />
-                            </a>
-                        </li>
-                        <li class="hide">
-                            <a href="http://www.devtf.cn" target="_blank" title="开发技术前线 ( Dev Tech Frontier ) 是一个各个IT领域 ( 前期只有Android和iOS )高质量技术文章、开源库、技术咨询的聚合网站，通过引入最新的优质文章，让我们的技术跟上国际步伐。该网站由Mr.Simple、chaossss、tiny-times、dupengwei创立，并且由开发技术前线Android开源组与开发技术前线iOS开源组维护,希望我们做的这些对大家有一点帮助。">
-                                <img src="https://i.loli.net/2019/04/28/5cc584b7a2fc2.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://diycode.cc" target="_blank" title="DiyCode是一个优雅、极客、创意、分享、美好的开发社区">
-                                <img src="https://i.loli.net/2019/04/28/5cc5a0426a785.jpg" />
                             </a>
                         </li>
                         <li>
@@ -257,8 +209,13 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://hencoder.com" target="_blank" title="扔物线辞职在家憋了一年的大招，良心之作。">
+                            <a href="https://hencoder.com" target="_blank" title="扔物线辞职在家憋了一年的大招，良心之作。">
                                 <img src="https://i.loli.net/2019/04/28/5cc5a1a4c8d44.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://aihunt.one" target="_blank" title="AI 工具导航，收录了国内外的众多 AI工具，包括AI写作工具、AI图像生成和处理、AI视频制作、AI音频转录、AI辅助编程、AI音乐生成、AI绘画设计、AI对话聊天等AI工具，以及AI学习开发的常用网站、教程、开源框架、开源模型和数据集等。">
+                                <img src="https://p.ipic.vip/h1fcsf.png" />
                             </a>
                         </li>
                     </ul>
