--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
     <script src="static/js/swiper.min.js"></script>
     <link rel="stylesheet" href="static/css/swiper.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- GrowingIO 统计 -->
     <!-- <script type='text/javascript'>
         var _vds = _vds || [];
@@ -155,22 +156,18 @@
                         <a class="dropdown-item"  href="#free-design-resources">Design Resources</a>
                     </div>
                 </li>
+                <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="aihunt" href="https://aihunt.one">AI 工具</a></li>
+                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">捐赠</a></li>
                 <li class="nav-item dropdown mx-4">
                     <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">更多</a>
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
                         <a class="dropdown-item" href="#books-list">书</a>
                         <a class="dropdown-item" href="#fuck-gfw-list">福利</a>
                         <a class="dropdown-item" href="gay_friends.html" id="gay_friends">好基友们</a>
+                        <a class="dropdown-item text-center" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
                     </div>
                 </li>
-                <!-- <li class="nav-item"><a class="nav-link" href="#books-list">书</a></li>
-                <li class="nav-item"><a class="nav-link" href="#fuck-gfw-list">福利</a></li>
-                <li class="nav-item"><a class="nav-link" id="gay_friends" href="gay_friends.html">好基友们</a></li> -->
-                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">捐赠</a></li>
                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
-                <li class="nav-item mx-4">
-                    <a class="nav-link menu-github-icon" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="36px" src="static/image/icon-github.png" alt="GitHub" /></a>
-                </li>
               </ul>
             </div>
         </nav>
