添加 AIHunt banner 图

--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
             <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
+                    <a href='https://aihunt.one?utm_source=androiddevtools.cn&amp;utm_medium=index-banner' target="_blank" onclick="trackOutboundLink('https://aihunt.one', 'AIHunt', 'click');" title="收录了国内外的众多 AI工具，包括AI写作工具、AI图像生成和处理、AI视频制作、AI音频转录、AI辅助编程、AI音乐生成、AI绘画设计、AI对话聊天等AI工具，以及AI学习开发的常用网站、教程、开源框架、开源模型和数据集等。">
+                        <img src="https://p.ipic.vip/aqs3fy.jpg">
+                    </a>
+                </div>
+                <div class="swiper-slide">
                     <a href='https://flutter.cn/urls/soa-s6-adt?utm_source=androiddevtools.cn&amp;utm_medium=banner' target="_blank" onclick="trackOutboundLink('https://flutter.cn/urls/soa-s6-adt', 'SOA-S6', 'click');" title="Google 谷歌应用出海计划 | 指南针 第六期">
                         <img src="https://devrel.andfun.cn/devrel/posts/2023-05-08-033117.png">
                     </a>
