--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@
     <meta name="description" content="下载 最新版 Android开发工具 ADT Bundle Android Studio AndroidStudio 2.0 Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 sDK tools下载">
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link href="static/css/app.css" rel="stylesheet">
+    <link href="static/css/app.css?v=20230512" rel="stylesheet">
     <link href="static/css/app-theme.css" rel="stylesheet">
     <link href="static/css/google-roboto-font-face.css" rel="stylesheet" type="text/css">
     <link href="static/css/backtotop.css" rel="stylesheet" type="text/css">
