--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <meta name="referrer" content="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link href="static/css/app.css" rel="stylesheet">
+    <link href="static/css/app.css?v=20230512" rel="stylesheet">
     <link href="static/css/app-theme.css" rel="stylesheet">
     <link href="static/css/google-roboto-font-face.css" rel="stylesheet" type="text/css">
     <link href="static/css/backtotop.css" rel="stylesheet" type="text/css">
