修改 Kotlin 协程实战广告图链接

--- a/index.html
+++ b/index.html
@@ -4734,7 +4734,7 @@
             {
                 "title": "Kotlin 协程实战",
                 "link": "#",
-                "image": "https://p.ipic.vip/hkj5m6.jpg",
+                "image": "https://static.codefuns.tech/images/common/ad/hkj5m6.jpg",
                 "isshow": true,
                 "start_time": "2023-02-16 00:00",
                 "end_time": "2023-10-01 00:00"
