add google adsense code

--- a/donate.html
+++ b/donate.html
@@ -1797,7 +1797,6 @@
         };
     </script>
     <!-- End Google Analytics -->
-    <!-- End Google Analytics -->
     <!-- add target attr to all a tag -->
     <script type="text/javascript">
         //bind a click
@@ -1817,6 +1816,8 @@
     <script>
         $('a[title=站长统计]').hide();
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
