--- a/gay_friends.html
+++ b/gay_friends.html
@@ -397,6 +397,8 @@
     <script>
         $('a[title=站长统计]').hide();
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
