--- a/donate.html
+++ b/donate.html
@@ -18,8 +18,6 @@
     <link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
-    crossorigin="anonymous"></script>
 </head>
 
 <body data-target=".content-nav">
@@ -1684,6 +1682,20 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="ads-container">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+                    crossorigin="anonymous"></script>
+                <!-- AndroidDevTools -->
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-client="ca-pub-5517858206486320"
+                    data-ad-slot="5790477697"
+                    data-ad-format="auto"
+                    data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </div>
         </div>
         <div class="container body-container margin-top-16">
