添加 google adsense code 到 head 标签

--- a/android-studio.html
+++ b/android-studio.html
@@ -19,6 +19,8 @@
     <link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+    crossorigin="anonymous"></script>
 </head>
 
 <body data-target=".content-nav">
