--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="static/js/swiper.min.js"></script>
     <link rel="stylesheet" href="static/css/swiper.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+    crossorigin="anonymous"></script>
 </head>
 
 <body data-target=".content-nav">
