--- a/android-studio.html
+++ b/android-studio.html
@@ -173,20 +173,7 @@
                     <blockquote style="color: gray">
                         <strong style="color: red">注意:</strong>以下 Android Studio 下载链接全是 <code>redirector.gvt1.com</code> 开头的官方下载，无需tizi，<strong style="color: red">建议用浏览器直接从官方原始链接下载，不要用迅雷下载、不要用迅雷下载、不要用迅雷下载</strong>，重要的事情说三遍，避免类似 <a href="https://www.zhihu.com/question/35721299">XCodeGhost</a> 的事件！！！
                     </blockquote>
-                    <div class="ads-container">
-                      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
-                      crossorigin="anonymous"></script>
-                      <!-- AndroidDevTools -->
-                      <ins class="adsbygoogle"
-                            style="display:block"
-                            data-ad-client="ca-pub-5517858206486320"
-                            data-ad-slot="5790477697"
-                            data-ad-format="auto"
-                            data-full-width-responsive="true"></ins>
-                      <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                      </script>
-                    </div>
+                    <!-- Google Ads -->
                     <div class="all-downloads">
                       <devsite-expandable is-upgraded="" id="expandable-1" expanded="">
                         <p class="expand-control exw-expanded" aria-controls="expandable-1" aria-expanded="true" tabindex="0" role="button">Android Studio Hedgehog | 2023.1.1 Canary 6
