--- a/gay_friends.html
+++ b/gay_friends.html
@@ -261,20 +261,7 @@
                         </li>
                     </ul>
                 </div>
-                <div id="ads-container">
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
-                        crossorigin="anonymous"></script>
-                    <!-- AndroidDevTools -->
-                    <ins class="adsbygoogle"
-                        style="display:block"
-                        data-ad-client="ca-pub-5517858206486320"
-                        data-ad-slot="5790477697"
-                        data-ad-format="auto"
-                        data-full-width-responsive="true"></ins>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </div>
+                <!-- Google Ads -->
             </div>
         </div>
         <div class="container body-container margin-top-16">
