修改友情链接菜单名称

--- a/android-studio.html
+++ b/android-studio.html
@@ -146,7 +146,7 @@
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
                         <a class="dropdown-item" href="index.html/#books-list">书</a>
                         <a class="dropdown-item" href="index.html/#fuck-gfw-list">福利</a>
-                        <a class="dropdown-item" href="gay_friends.html" id="gay_friends">好基友们</a>
+                        <a class="dropdown-item" href="friends.html" id="friends">好朋友们</a>
                         <a class="dropdown-item text-center" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
                     </div>
                 </li>
