--- a/friends.html
+++ b/friends.html
@@ -145,7 +145,7 @@
                     <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
                         <a class="dropdown-item" href="index.html/#books-list">书</a>
                         <a class="dropdown-item" href="index.html/#fuck-gfw-list">福利</a>
-                        <a class="dropdown-item" href="gay_friends.html" id="gay_friends">好基友们</a>
+                        <a class="dropdown-item" href="friends.html" id="friends">好朋友们</a>
                         <a class="dropdown-item text-center" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
                     </div>
                 </li>
@@ -157,11 +157,11 @@
     <section id="body">
         <div class="container body-container">
             <div class="row">
-                <div id="gay_friends_list" class="link-image-list">
+                <div id="friends_list" class="link-image-list">
                     <center>
-                        <h2>好基友们</h2>
+                        <h2>好朋友们</h2>
                     </center>
-                    <p>以下是我的好基友们，他们既是 Android 牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年，以及其他一些有用的、有意思的网站。</p>
+                    <p>以下是我的好朋友们，他们既是 Android 牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年，以及其他一些有用的、有意思的网站。</p>
                     <ul>
                         <li>
                             <a href="http://www.androidweekly.io/" target="_blank" title="汇集互联网上每周Android开发相关的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
@@ -170,12 +170,12 @@
                         </li>
                         <li>
                             <a href="http://www.codekk.com" target="_blank" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
-                                <img src="http://www.codekk.com/images/codekk-com-130-64.png" />
+                                <img src="https://p.ipic.vip/ae5bku.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.trinea.cn/" target="_blank" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
-                                <img src="http://www.codekk.com/images/trinea-cn-130-64.png" />
+                                <img src="https://p.ipic.vip/i837pv.jpg" />
                             </a>
                         </li>
                         <li>
@@ -190,7 +190,7 @@
                         </li>
                         <li>
                             <a href="http://www.gcssloop.com" target="_blank" title="一名来自2.5次元的魔法师，Android自定义View系列文章作者，非著名程序员">
-                                <img src="http://www.gcssloop.com/assets/siteinfo/friends/gcssloop.jpg" />
+                                <img src="https://p.ipic.vip/jgmukj.jpg" />
                             </a>
                         </li>
                         <li>
@@ -206,7 +206,7 @@
                     </ul>
                 </div>
 
-                <div id="gay_friends_list" class="link-image-list" style="clear: both;">
+                <div id="friends_list" class="link-image-list" style="clear: both;">
                     <center>
                         <h2>Google 相关网站</h2>
                     </center>
@@ -239,7 +239,7 @@
                     </ul>
                 </div>
 
-                <div id="gay_friends_list" class="link-image-list" style="clear: both;">
+                <div id="friends_list" class="link-image-list" style="clear: both;">
                     <center>
                         <h2>其他有趣的网站</h2>
                     </center>
@@ -275,7 +275,7 @@
         </div>
     </section>
     <div class="zh-backtotop">
-        <a data-action="backtotop" data-tip="s$r$回到顶部" class="btn-backtotop btn-action">
+        <a data-action="backtotop" data-tip="回到顶部" class="btn-backtotop btn-action">
             <img class="arrow" src="static/image/backtotop_arrow.png">
         </a>
     </div>
