add google adsense code

--- a/donate.html
+++ b/donate.html
@@ -1686,6 +1686,20 @@
                 </table>
             </div>
             <!-- Google Ads -->
+            <div class="ads-container">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+                    crossorigin="anonymous"></script>
+                <!-- AndroidDevTools -->
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-client="ca-pub-5517858206486320"
+                    data-ad-slot="5790477697"
+                    data-ad-format="auto"
+                    data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+              </div>
         </div>
         <div class="container body-container margin-top-16">
             <!-- 评论框 -->
