--- a/index.html
+++ b/index.html
@@ -216,7 +216,12 @@
             .swiper-pagination-bullet {
                 width: 12px;
                 height: 12px;
+                background: white;
             }
+            .swiper-pagination-bullet-active {
+                background: var(--swiper-theme-color);
+            }
+
         </style>
         <script>
             var mySwiper = new Swiper ('.swiper-container', {
@@ -256,7 +261,21 @@
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道。</p>
                     <p>或者可以考虑对本站<a href="./donate.html"><strong>捐赠</strong></a>支持下，支持我把本站做的更好，帮助更多的人。目前支持支付宝和微信，金额随意。</p>
                 </div>
-                <!-- Google Ads -->
+                <!-- 首页 -->
+                <div class="ads-container">
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5517858206486320"
+                        crossorigin="anonymous"></script>
+                    <!-- AndroidDevTools -->
+                    <ins class="adsbygoogle"
+                        style="display:block"
+                        data-ad-client="ca-pub-5517858206486320"
+                        data-ad-slot="5790477697"
+                        data-ad-format="auto"
+                        data-full-width-responsive="true"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
                 <div id="android-dev-tools" class="hide">
                     <h2>Android Tools</h2>
                     <div id="android-sdk-online-server">
@@ -5558,7 +5577,7 @@
         initBookList();
         addBannerItemClickEvent();
     </script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e313f50a3c838b7"></script>
+    <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e313f50a3c838b7"></script> -->
 </body>
 
 </html>
