修改一些错误

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <a class="dropdown-item" href="#books-list">书</a>
                         <a class="dropdown-item" href="#fuck-gfw-list">福利</a>
                         <a class="dropdown-item" href="friends.html" id="friends">好朋友们</a>
-                        <a class="dropdown-item text-center" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
+                        <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project"><img width="16px" src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" /> GitHub</a>
                     </div>
                 </li>
                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
@@ -1580,7 +1580,7 @@
                                 </td>
                                 <td>620325945</td>
                                 <td>cc498ef01d7fe919dcc8aeb4d709f4ff793dee46</td>
-                                <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/006y8mN6gw1f8w8h0ot7gj30ys0gqacd.jpg">查看</a></td>
+                                <td rowspan="4"><a href="https://ww1.sinaimg.cn/large/006y8mN6gw1f8w8h0ot7gj30ys0gqacd.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows 64-bit</td>
@@ -4562,16 +4562,16 @@
                         <h2>开启新世界大门的🔑</h2>
                         <ul>
                             <li>
-                                <a href="https://bwh1.net/aff.php?aff=133&amp;pid=57" title="注册即送 10 刀，更有直连中国的线路仅需 3.99 刀一个月，年付只需 29 刀，使用优惠码 BWH1ZBPVK 再节省 6%" onclick="trackOutboundLink('https://bwh1.net/aff.php?aff=133&amp;pid=56', 'Host-bandwagonhost', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qvivcj308g02st92.jpg"></a>
+                                <a href="https://bwh1.net/aff.php?aff=133&amp;pid=57" title="注册即送 10 刀，更有直连中国的线路仅需 3.99 刀一个月，年付只需 29 刀，使用优惠码 BWH1ZBPVK 再节省 6%" onclick="trackOutboundLink('https://bwh1.net/aff.php?aff=133&amp;pid=56', 'Host-bandwagonhost', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="https://ww1.sinaimg.cn/large/006tNbRwly1ffe62qvivcj308g02st92.jpg"></a>
                             </li>
                             <li>
-                                <a href="https://www.vultr.com/?ref=706872" title="VultrVultr 注册即送 30 刀，节点多，最便宜 2.5 刀一个月" onclick="trackOutboundLink('https://www.vultr.com/?ref=706872', 'Host-vultr', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qbnm4j308g02saa8.jpg"></a>
+                                <a href="https://www.vultr.com/?ref=706872" title="VultrVultr 注册即送 30 刀，节点多，最便宜 2.5 刀一个月" onclick="trackOutboundLink('https://www.vultr.com/?ref=706872', 'Host-vultr', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="https://ww1.sinaimg.cn/large/006tNbRwly1ffe62qbnm4j308g02saa8.jpg"></a>
                             </li>
                             <li>
-                                <a href="https://www.digitalocean.com/?refcode=ef15936ffa93" title="DigitalOcean注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.digitalocean.com/?refcode=ef15936ffa93', 'Host-digitalocean', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qnb5ij308g02s0t1.jpg"></a>
+                                <a href="https://www.digitalocean.com/?refcode=ef15936ffa93" title="DigitalOcean注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.digitalocean.com/?refcode=ef15936ffa93', 'Host-digitalocean', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="https://ww1.sinaimg.cn/large/006tNbRwly1ffe62qnb5ij308g02s0t1.jpg"></a>
                             </li>
                             <li>
-                                <a href="https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e" title="Linode注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e', 'Host-linode', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qir5cj308g02swew.jpg"></a>
+                                <a href="https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e" title="Linode注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e', 'Host-linode', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="https://ww1.sinaimg.cn/large/006tNbRwly1ffe62qir5cj308g02swew.jpg"></a>
                             </li>
                         </ul>
                     </div>
@@ -4632,11 +4632,6 @@
         })
         gitment.render('comments-container')
     </script>
-
-    <!-- BEGIN COPY CODEFUND EMBED -->
-    <div id="codefund"></div>
-    <script  src="https://app.codefund.io/properties/783/funder.js" async></script>
-    <!-- END COPY CODEFUND EMBED -->
 
     <!-- 评论JS代码 end -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
